# experiments

./: .gitignore
attractorSonification/: .clangd  .gitignore  CMakeLists.txt  README.md  main.c  shell.nix
mu-dsp-cource/osc_i/: Makefile  conspect.html  conspect.org
mu-dsp-cource/osc_i/src/: Makefile  display_freq.c  graphics.c  main.c  osc.c  osc_i.h  phasor.c  sine  sine.c
mu-dsp-cource/wave/: Makefile
mu-dsp-cource/wave/src/: wav-file-generator.c
raylib/: compile_commands.json
sound/: .#sine-wave-generation.html  .#sine-wave-generation.org  CMakeLists.txt  CMakeLists.txt~  Makefile  a.out  compile_commands.json  config.mk  default.nix  jack-basic.c  osc-1.c  phasor-mouse.c  phasor.c  run.sh  saw_process.h  shell.nix  sine.c
sound/src/: #phasor.c#  .#phasor.c  common.c  common.h  generate-sine.c  jack-base.c  mouse.c  phasor.c  saw.c  sine.c  sine_unbounded.c
